--- a/css/feedback.css
+++ b/css/feedback.css
@@ -63,7 +63,7 @@ li a:hover:not(.active) {
     text-align: center;
 }
 
-.feedbacks {
+.feedbackJS {
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
