--- a/css/inicio.css
+++ b/css/inicio.css
@@ -104,7 +104,7 @@ li a:hover:not(.active) {
     text-align: center;
 }
 
-.feedbacks {
+.feedbackJS {
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
